RESOLVED FIXED275494
[iOS] Several editing pasteboard tests fail when built WebKit is binary compatible with system WebKit
https://bugs.webkit.org/show_bug.cgi?id=275494
Summary [iOS] Several editing pasteboard tests fail when built WebKit is binary compa...
Wenson Hsieh
Reported 2024-06-14 10:28:23 PDT
Attachments
Wenson Hsieh
Comment 1 2024-06-14 11:50:41 PDT
EWS
Comment 2 2024-06-14 13:59:30 PDT
Committed 280036@main (8fef2855838a): <https://commits.webkit.org/280036@main> Reviewed commits have been landed. Closing PR #29834 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.